# Computational-Statistics-and-Probability

./: .gitattributes  README.md  pyproject.toml
assignment_1/: part_1.ipynb  part_2.ipynb
